// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ViewFormListItem test case1: test by snapshots, @props.message is true 1`] = `
<div
  className="view-form-item"
>
  <h6>
    <FormattedMessage
      defaultMessage="defaultMessage"
      id="messageId"
      values={Object {}}
    />
  </h6>
  <p>
    user
  </p>
</div>
`;

exports[`ViewFormListItem test case2: test by snapshots,  @props.message is false 1`] = `
<div
  className="view-form-item"
>
  <h6>
    <FormattedMessage
      defaultMessage="defaultMessage"
      id="messageId"
      values={Object {}}
    />
  </h6>
  <p>
    <FormattedMessage
      defaultMessage="Required field"
      id="app.containers.AskQuestion.requiredField"
      values={Object {}}
    />
  </p>
</div>
`;
